com/uf_html/src/com/uf_html/UFHtmlParser.java
// Generated from C:/Users/tobe/Source/Repos/uf-html/com/uf_html/src/com/uf_html\UFHtml.g4 by ANTLR 4.5
package com.uf_html;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UFHtmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS_NAME=1, COMMA=2, DOT=3, EQUALS=4, EXCLAMATION_POINT=5, ID=6, LBRACKET=7, 
		LCURLY=8, LPAREN=9, NUMBER=10, POUND=11, QUOTE=12, RANGLE=13, RBRACKET=14, 
		RCURLY=15, RPAREN=16, SEMI=17, STRING_LITERAL=18, TAG_NAME=19, WS=20;
	public static final int
		RULE_document = 0, RULE_directive = 1, RULE_directive_single = 2, RULE_directive_double = 3, 
		RULE_element = 4, RULE_attr_set = 5, RULE_attrs = 6, RULE_elementType = 7, 
		RULE_emptyElement = 8, RULE_fullElement = 9, RULE_inner_Text = 10, RULE_tag_name = 11;
	public static final String[] ruleNames = {
		"document", "directive", "directive_single", "directive_double", "element", 
		"attr_set", "attrs", "elementType", "emptyElement", "fullElement", "inner_Text", 
		"tag_name"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "','", "'.'", "'='", "'!'", null, "'['", "'{'", "'('", null, 
		"'#'", "'\"'", "'>'", "']'", "'}'", "')'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CLASS_NAME", "COMMA", "DOT", "EQUALS", "EXCLAMATION_POINT", "ID", 
		"LBRACKET", "LCURLY", "LPAREN", "NUMBER", "POUND", "QUOTE", "RANGLE", 
		"RBRACKET", "RCURLY", "RPAREN", "SEMI", "STRING_LITERAL", "TAG_NAME", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UFHtml.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UFHtmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentContext extends ParserRuleContext {
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(UFHtmlParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(UFHtmlParser.SEMI, i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(24); 
					directive();
					setState(28);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SEMI) {
						{
						{
						setState(25); 
						match(SEMI);
						}
						}
						setState(30);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					} 
				}
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(36); 
				element();
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(37); 
					match(SEMI);
					}
					}
					setState(42);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS_NAME) | (1L << EXCLAMATION_POINT) | (1L << ID) | (1L << TAG_NAME))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public Directive_singleContext directive_single() {
			return getRuleContext(Directive_singleContext.class,0);
		}
		public Directive_doubleContext directive_double() {
			return getRuleContext(Directive_doubleContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_directive);
		try {
			setState(49);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47); 
				directive_single();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(48); 
				directive_double();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Directive_singleContext extends ParserRuleContext {
		public Token key;
		public TerminalNode EXCLAMATION_POINT() { return getToken(UFHtmlParser.EXCLAMATION_POINT, 0); }
		public TerminalNode TAG_NAME() { return getToken(UFHtmlParser.TAG_NAME, 0); }
		public Directive_singleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive_single; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterDirective_single(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitDirective_single(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitDirective_single(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Directive_singleContext directive_single() throws RecognitionException {
		Directive_singleContext _localctx = new Directive_singleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_directive_single);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			match(EXCLAMATION_POINT);
			setState(52); 
			((Directive_singleContext)_localctx).key = match(TAG_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Directive_doubleContext extends ParserRuleContext {
		public Token key;
		public Token value;
		public TerminalNode EXCLAMATION_POINT() { return getToken(UFHtmlParser.EXCLAMATION_POINT, 0); }
		public List<TerminalNode> TAG_NAME() { return getTokens(UFHtmlParser.TAG_NAME); }
		public TerminalNode TAG_NAME(int i) {
			return getToken(UFHtmlParser.TAG_NAME, i);
		}
		public Directive_doubleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive_double; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterDirective_double(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitDirective_double(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitDirective_double(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Directive_doubleContext directive_double() throws RecognitionException {
		Directive_doubleContext _localctx = new Directive_doubleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_directive_double);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); 
			match(EXCLAMATION_POINT);
			setState(55); 
			((Directive_doubleContext)_localctx).key = match(TAG_NAME);
			setState(56); 
			((Directive_doubleContext)_localctx).value = match(TAG_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public java.util.HashMap<String, String> attributes =  new java.util.HashMap<String, String>();
		public Token exclamation;
		public EmptyElementContext emptyElement() {
			return getRuleContext(EmptyElementContext.class,0);
		}
		public FullElementContext fullElement() {
			return getRuleContext(FullElementContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(UFHtmlParser.SEMI, 0); }
		public TerminalNode EXCLAMATION_POINT() { return getToken(UFHtmlParser.EXCLAMATION_POINT, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if (_la==EXCLAMATION_POINT) {
				{
				setState(58); 
				((ElementContext)_localctx).exclamation = match(EXCLAMATION_POINT);
				}
			}

			setState(63);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(61); 
				emptyElement();
				}
				break;
			case 2:
				{
				setState(62); 
				fullElement();
				}
				break;
			}
			setState(66);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(65); 
				match(SEMI);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_setContext extends ParserRuleContext {
		public Token key;
		public Token value;
		public TerminalNode EQUALS() { return getToken(UFHtmlParser.EQUALS, 0); }
		public TerminalNode TAG_NAME() { return getToken(UFHtmlParser.TAG_NAME, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(UFHtmlParser.STRING_LITERAL, 0); }
		public TerminalNode NUMBER() { return getToken(UFHtmlParser.NUMBER, 0); }
		public Attr_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterAttr_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitAttr_set(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitAttr_set(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_setContext attr_set() throws RecognitionException {
		Attr_setContext _localctx = new Attr_setContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attr_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(68); 
				((Attr_setContext)_localctx).key = match(TAG_NAME);
				}
				break;
			case 2:
				{
				{
				setState(69); 
				((Attr_setContext)_localctx).key = match(TAG_NAME);
				}
				setState(70); 
				match(EQUALS);
				setState(71);
				((Attr_setContext)_localctx).value = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==NUMBER || _la==STRING_LITERAL) ) {
					((Attr_setContext)_localctx).value = (Token)_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			}

			            if (((Attr_setContext)_localctx).value != null) {
			                ((ElementContext)getInvokingContext(4)).attributes.put((((Attr_setContext)_localctx).key!=null?((Attr_setContext)_localctx).key.getText():null), (((Attr_setContext)_localctx).value!=null?((Attr_setContext)_localctx).value.getText():null));
			            }
			            else {
			                ((ElementContext)getInvokingContext(4)).attributes.put((((Attr_setContext)_localctx).key!=null?((Attr_setContext)_localctx).key.getText():null), (((Attr_setContext)_localctx).key!=null?((Attr_setContext)_localctx).key.getText():null));
			            }
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttrsContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(UFHtmlParser.LBRACKET, 0); }
		public List<Attr_setContext> attr_set() {
			return getRuleContexts(Attr_setContext.class);
		}
		public Attr_setContext attr_set(int i) {
			return getRuleContext(Attr_setContext.class,i);
		}
		public TerminalNode RBRACKET() { return getToken(UFHtmlParser.RBRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(UFHtmlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UFHtmlParser.COMMA, i);
		}
		public AttrsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterAttrs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitAttrs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitAttrs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttrsContext attrs() throws RecognitionException {
		AttrsContext _localctx = new AttrsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_attrs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); 
			match(LBRACKET);
			setState(77); 
			attr_set();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(78); 
				match(COMMA);
				setState(79); 
				attr_set();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85); 
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementTypeContext extends ParserRuleContext {
		public Token tagName;
		public Token className;
		public Token id;
		public TerminalNode TAG_NAME() { return getToken(UFHtmlParser.TAG_NAME, 0); }
		public TerminalNode ID() { return getToken(UFHtmlParser.ID, 0); }
		public List<TerminalNode> CLASS_NAME() { return getTokens(UFHtmlParser.CLASS_NAME); }
		public TerminalNode CLASS_NAME(int i) {
			return getToken(UFHtmlParser.CLASS_NAME, i);
		}
		public ElementTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterElementType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitElementType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitElementType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementTypeContext elementType() throws RecognitionException {
		ElementTypeContext _localctx = new ElementTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elementType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(87); 
				((ElementTypeContext)_localctx).tagName = match(TAG_NAME);
				}
				break;
			case 2:
				{
				setState(89);
				_la = _input.LA(1);
				if (_la==TAG_NAME) {
					{
					setState(88); 
					((ElementTypeContext)_localctx).tagName = match(TAG_NAME);
					}
				}

				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(91); 
					((ElementTypeContext)_localctx).className = match(CLASS_NAME);
					}
					}
					setState(94); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CLASS_NAME );
				}
				break;
			case 3:
				{
				setState(97);
				_la = _input.LA(1);
				if (_la==TAG_NAME) {
					{
					setState(96); 
					((ElementTypeContext)_localctx).tagName = match(TAG_NAME);
					}
				}

				setState(99); 
				((ElementTypeContext)_localctx).id = match(ID);
				}
				break;
			case 4:
				{
				setState(118);
				switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
				case 1:
					{
					setState(101);
					_la = _input.LA(1);
					if (_la==TAG_NAME) {
						{
						setState(100); 
						((ElementTypeContext)_localctx).tagName = match(TAG_NAME);
						}
					}

					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(103); 
						((ElementTypeContext)_localctx).className = match(CLASS_NAME);
						}
						}
						setState(106); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==CLASS_NAME );
					setState(108); 
					((ElementTypeContext)_localctx).id = match(ID);
					}
					break;
				case 2:
					{
					setState(110);
					_la = _input.LA(1);
					if (_la==TAG_NAME) {
						{
						setState(109); 
						((ElementTypeContext)_localctx).tagName = match(TAG_NAME);
						}
					}

					setState(112); 
					((ElementTypeContext)_localctx).id = match(ID);
					setState(114); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(113); 
						((ElementTypeContext)_localctx).className = match(CLASS_NAME);
						}
						}
						setState(116); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==CLASS_NAME );
					}
					break;
				}
				}
				break;
			}

			        if (((ElementTypeContext)_localctx).id != null) {
			            ((ElementContext)getInvokingContext(4)).attributes.put("id", (((ElementTypeContext)_localctx).id!=null?((ElementTypeContext)_localctx).id.getText():null).replaceAll("#", ""));
			        }
			        if (((ElementTypeContext)_localctx).className != null) {
			            ((ElementContext)getInvokingContext(4)).attributes.put("class", (((ElementTypeContext)_localctx).className!=null?((ElementTypeContext)_localctx).className.getText():null).replaceAll("\\.", ""));
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmptyElementContext extends ParserRuleContext {
		public AttrsContext attributes;
		public Inner_TextContext innerText;
		public ElementTypeContext elementType() {
			return getRuleContext(ElementTypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(UFHtmlParser.SEMI, 0); }
		public TerminalNode LCURLY() { return getToken(UFHtmlParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(UFHtmlParser.RCURLY, 0); }
		public TerminalNode RANGLE() { return getToken(UFHtmlParser.RANGLE, 0); }
		public AttrsContext attrs() {
			return getRuleContext(AttrsContext.class,0);
		}
		public Inner_TextContext inner_Text() {
			return getRuleContext(Inner_TextContext.class,0);
		}
		public EmptyElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptyElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterEmptyElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitEmptyElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitEmptyElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EmptyElementContext emptyElement() throws RecognitionException {
		EmptyElementContext _localctx = new EmptyElementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_emptyElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				{
				setState(124); 
				elementType();
				setState(126);
				_la = _input.LA(1);
				if (_la==LBRACKET) {
					{
					setState(125); 
					((EmptyElementContext)_localctx).attributes = attrs();
					}
				}

				setState(130);
				_la = _input.LA(1);
				if (_la==RANGLE) {
					{
					setState(128); 
					match(RANGLE);
					setState(129); 
					((EmptyElementContext)_localctx).innerText = inner_Text();
					}
				}

				setState(132); 
				match(SEMI);
				}
				break;
			case 2:
				{
				setState(134); 
				elementType();
				setState(136);
				_la = _input.LA(1);
				if (_la==LBRACKET) {
					{
					setState(135); 
					((EmptyElementContext)_localctx).attributes = attrs();
					}
				}

				setState(138); 
				match(LCURLY);
				setState(139); 
				match(RCURLY);
				setState(143);
				_la = _input.LA(1);
				if (_la==STRING_LITERAL) {
					{
					{
					setState(140); 
					((EmptyElementContext)_localctx).innerText = inner_Text();
					}
					setState(141); 
					match(SEMI);
					}
				}

				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FullElementContext extends ParserRuleContext {
		public AttrsContext attributes;
		public ElementContext children;
		public Inner_TextContext innerText;
		public ElementTypeContext elementType() {
			return getRuleContext(ElementTypeContext.class,0);
		}
		public TerminalNode LCURLY() { return getToken(UFHtmlParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(UFHtmlParser.RCURLY, 0); }
		public TerminalNode SEMI() { return getToken(UFHtmlParser.SEMI, 0); }
		public AttrsContext attrs() {
			return getRuleContext(AttrsContext.class,0);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public Inner_TextContext inner_Text() {
			return getRuleContext(Inner_TextContext.class,0);
		}
		public FullElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fullElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterFullElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitFullElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitFullElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FullElementContext fullElement() throws RecognitionException {
		FullElementContext _localctx = new FullElementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fullElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); 
			elementType();
			setState(149);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(148); 
				((FullElementContext)_localctx).attributes = attrs();
				}
			}

			setState(151); 
			match(LCURLY);
			setState(153); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(152); 
				((FullElementContext)_localctx).children = element();
				}
				}
				setState(155); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS_NAME) | (1L << EXCLAMATION_POINT) | (1L << ID) | (1L << TAG_NAME))) != 0) );
			setState(157); 
			match(RCURLY);
			setState(161);
			_la = _input.LA(1);
			if (_la==STRING_LITERAL) {
				{
				{
				setState(158); 
				((FullElementContext)_localctx).innerText = inner_Text();
				}
				setState(159); 
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inner_TextContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(UFHtmlParser.STRING_LITERAL, 0); }
		public Inner_TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inner_Text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).enterInner_Text(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFHtmlListener ) ((UFHtmlListener)listener).exitInner_Text(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFHtmlVisitor ) return ((UFHtmlVisitor<? extends T>)visitor).visitInner_Text(this);
			else return visitor.visitChildren(this);
		}
	}
